<resources>
    <string name="app_name">Bucket List Match</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string-array name="action_list">
        <item>HOME</item>
        <item>DISCOVER</item>
        <item>BUCKET LIST</item>
        <item>SCRAPBOOKS</item>
        <item>MATCH</item>
        <item>PROFILE</item>
    </string-array>
    <string-array name="action_share">
        <item>Search</item>
        <item>Email</item>
        <item>Facebook</item>
    </string-array>
    <string-array name="country_list">
        <item> Aruba </item>
        <item> Afghanistan </item>
        <item> Angola </item>
        <item> Anguilla </item>
        <item> Åland Islands </item>
        <item> Albania </item>
        <item> Andorra </item>
        <item> United Arab Emirates </item>
        <item> Argentina </item>
        <item> Armenia </item>
        <item> American Samoa </item>
        <item> Antarctica </item>
        <item> French Southern Territories </item>
        <item> Antigua and Barbuda </item>
        <item> Australia </item>
        <item> Austria </item>
        <item> Azerbaijan </item>
        <item> Burundi </item>
        <item> Belgium </item>
        <item> Benin </item>
        <item> Bonaire, Sint Eustatius and Saba </item>
        <item> Burkina Faso </item>
        <item> Bangladesh </item>
        <item> Bulgaria </item>
        <item> Bahrain </item>
        <item> Bahamas </item>
        <item> Bosnia and Herzegovina </item>
        <item> Saint Barthélemy </item>
        <item> Belarus </item>
        <item> Belize </item>
        <item> Bermuda </item>
        <item> Bolivia, Plurinational State of </item>
        <item> Brazil </item>
        <item> Barbados </item>
        <item> Brunei Darussalam </item>
        <item> Bhutan </item>
        <item> Bouvet Island </item>
        <item> Botswana </item>
        <item> Central African Republic </item>
        <item> Canada </item>
        <item> Cocos (Keeling) Islands </item>
        <item> Switzerland </item>
        <item> Chile </item>
        <item> China </item>
        <item> Côte d\'Ivoire </item>
        <item> Cameroon </item>
        <item> Congo, the Democratic Republic of the </item>
        <item> Congo </item>
        <item> Cook Islands </item>
        <item> Colombia </item>
        <item> Comoros </item>
        <item> Cape Verde </item>
        <item> Costa Rica </item>
        <item> Cuba </item>
        <item> Curaçao </item>
        <item> Christmas Island </item>
        <item> Cayman Islands </item>
        <item> Cyprus </item>
        <item> Czech Republic </item>
        <item> Germany </item>
        <item> Djibouti </item>
        <item> Dominica </item>
        <item> Denmark </item>
        <item> Dominican Republic </item>
        <item> Algeria </item>
        <item> Ecuador </item>
        <item> Egypt </item>
        <item> Eritrea </item>
        <item> Western Sahara </item>
        <item> Spain </item>
        <item> Estonia </item>
        <item> Ethiopia </item>
        <item> Finland </item>
        <item> Fiji </item>
        <item> Falkland Islands (Malvinas) </item>
        <item> France </item>
        <item> Faroe Islands </item>
        <item> Micronesia, Federated States of </item>
        <item> Gabon </item>
        <item> United Kingdom </item>
        <item> Georgia </item>
        <item> Guernsey </item>
        <item> Ghana </item>
        <item> Gibraltar </item>
        <item> Guinea </item>
        <item> Guadeloupe </item>
        <item> Gambia </item>
        <item> Guinea-Bissau </item>
        <item> Equatorial Guinea </item>
        <item> Greece </item>
        <item> Grenada </item>
        <item> Greenland </item>
        <item> Guatemala </item>
        <item> French Guiana </item>
        <item> Guam </item>
        <item> Guyana </item>
        <item> Hong Kong </item>
        <item> Heard Island and McDonald Islands </item>
        <item> Honduras </item>
        <item> Croatia </item>
        <item> Haiti </item>
        <item> Hungary </item>
        <item> Indonesia </item>
        <item> Isle of Man </item>
        <item> India </item>
        <item> British Indian Ocean Territory </item>
        <item> Ireland </item>
        <item> Iran, Islamic Republic of </item>
        <item> Iraq </item>
        <item> Iceland </item>
        <item> Israel </item>
        <item> Italy </item>
        <item> Jamaica </item>
        <item> Jersey </item>
        <item> Jordan </item>
        <item> Japan </item>
        <item> Kazakhstan </item>
        <item> Kenya </item>
        <item> Kyrgyzstan </item>
        <item> Cambodia </item>
        <item> Kiribati </item>
        <item> Saint Kitts and Nevis </item>
        <item> Korea, Republic of </item>
        <item> Kuwait </item>
        <item> Lao People\'s Democratic Republic </item>
        <item> Lebanon </item>
        <item> Liberia </item>
        <item> Libya </item>
        <item> Saint Lucia </item>
        <item> Liechtenstein </item>
        <item> Sri Lanka </item>
        <item> Lesotho </item>
        <item> Lithuania </item>
        <item> Luxembourg </item>
        <item> Latvia </item>
        <item> Macao </item>
        <item> Saint Martin (French part) </item>
        <item> Morocco </item>
        <item> Monaco </item>
        <item> Moldova, Republic of </item>
        <item> Madagascar </item>
        <item> Maldives </item>
        <item> Mexico </item>
        <item> Marshall Islands </item>
        <item> Macedonia, the former Yugoslav Republic of </item>
        <item> Mali </item>
        <item> Malta </item>
        <item> Myanmar </item>
        <item> Montenegro </item>
        <item> Mongolia </item>
        <item> Northern Mariana Islands </item>
        <item> Mozambique </item>
        <item> Mauritania </item>
        <item> Montserrat </item>
        <item> Martinique </item>
        <item> Mauritius </item>
        <item> Malawi </item>
        <item> Malaysia </item>
        <item> Mayotte </item>
        <item> Namibia </item>
        <item> New Caledonia </item>
        <item> Niger </item>
        <item> Norfolk Island </item>
        <item> Nigeria </item>
        <item> Nicaragua </item>
        <item> Niue </item>
        <item> Netherlands </item>
        <item> Norway </item>
        <item> Nepal </item>
        <item> Nauru </item>
        <item> New Zealand </item>
        <item> Oman </item>
        <item> Pakistan </item>
        <item> Panama </item>
        <item> Pitcairn </item>
        <item> Peru </item>
        <item> Philippines </item>
        <item> Palau </item>
        <item> Papua New Guinea </item>
        <item> Poland </item>
        <item> Puerto Rico </item>
        <item> Korea, Democratic People\'s Republic of </item>
        <item> Portugal </item>
        <item> Paraguay </item>
        <item> Palestine, State of </item>
        <item> French Polynesia </item>
        <item> Qatar </item>
        <item> Réunion </item>
        <item> Romania </item>
        <item> Russian Federation </item>
        <item> Rwanda </item>
        <item> Saudi Arabia </item>
        <item> Sudan </item>
        <item> Senegal </item>
        <item> Singapore </item>
        <item> South Georgia and the South Sandwich Islands </item>
        <item> Saint Helena, Ascension and Tristan da Cunha </item>
        <item> Svalbard and Jan Mayen </item>
        <item> Solomon Islands </item>
        <item> Sierra Leone </item>
        <item> El Salvador </item>
        <item> San Marino </item>
        <item> Somalia </item>
        <item> Saint Pierre and Miquelon </item>
        <item> Serbia </item>
        <item> South Sudan </item>
        <item> Sao Tome and Principe </item>
        <item> Suriname </item>
        <item> Slovakia </item>
        <item> Slovenia </item>
        <item> Sweden </item>
        <item> Swaziland </item>
        <item> Sint Maarten (Dutch part) </item>
        <item> Seychelles </item>
        <item> Syrian Arab Republic </item>
        <item> Turks and Caicos Islands </item>
        <item> Chad </item>
        <item> Togo </item>
        <item> Thailand </item>
        <item> Tajikistan </item>
        <item> Tokelau </item>
        <item> Turkmenistan </item>
        <item> Timor-Leste </item>
        <item> Tonga </item>
        <item> Trinidad and Tobago </item>
        <item> Tunisia </item>
        <item> Turkey </item>
        <item> Tuvalu </item>
        <item> Taiwan, Province of China </item>
        <item> Tanzania, United Republic of </item>
        <item> Uganda </item>
        <item> Ukraine </item>
        <item> United States Minor Outlying Islands </item>
        <item> Uruguay </item>
        <item> United States </item>
        <item> Uzbekistan </item>
        <item> Holy See (Vatican City State) </item>
        <item> Saint Vincent and the Grenadines </item>
        <item> Venezuela, Bolivarian Republic of </item>
        <item> Virgin Islands, British </item>
        <item> Virgin Islands, U.S. </item>
        <item> Viet Nam </item>
        <item> Vanuatu </item>
        <item> Wallis and Futuna </item>
        <item> Samoa </item>
        <item> Yemen </item>
        <item> South Africa </item>
        <item> Zambia </item>
        <item> Zimbabwe </item>
    </string-array>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="usernameProfile">Username:</string>
    <string name="emailProfile">Email:</string>
    <string name="realNameProfile">Real Name:</string>
    <string name="share">Share</string>
    <string name="title_activity_forget_password">Forget_password</string>
    <string name="enterEmail">Enter your e-mail below:</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="reenterPassword">Re-enter password</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="account_category">Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="terms">Terms</string>
    <string name="privacy">Privacy</string>
    <string-array name="days">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="months">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>