<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#0080ff"
    tools:context=".SignUpActivity" >

    <EditText
        android:id="@+id/password2TextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password1TextField"
        android:layout_below="@+id/password1TextField"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/accountCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameRegisterTextField"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/usernameRegisterTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accountCat"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
        <requestFocus />

    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameRegisterTextField"
        android:layout_below="@+id/usernameRegisterTextField"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/password1TextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="validateSignUp"
        android:text="@string/signup" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password2TextField"
        android:layout_below="@+id/password1TextField"
        android:layout_marginTop="16dp"
        android:text="@string/reenterPassword"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/firstNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/firstNameLabel"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lastNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastNameLabel"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/firstNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstNameText"
        android:layout_below="@+id/password2TextField"
        android:text="First Name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lastNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/firstNameText"
        android:layout_alignLeft="@+id/lastNameText"
        android:text="Last Name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/dobLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstNameText"
        android:layout_toLeftOf="@+id/signupButton"
        android:text="Date of Birth"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/dobSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstNameText"
        android:layout_alignRight="@+id/firstNameText"
        android:layout_below="@+id/dobLabel"
        android:ems="10"
        android:inputType="date" />

    <Spinner
        android:id="@+id/countrySignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/dobSignUp"
        android:layout_toRightOf="@+id/signupButton" />

    <TextView
        android:id="@+id/countryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/countrySignUp"
        android:layout_alignLeft="@+id/lastNameText"
        android:text="Country"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>